# raspberry-fan

./: .gitignore  CMakeLists.txt  PROJECT_ANALYSIS.md  README.md  config.txt  install.sh  main.cpp  raspberry_fan.service
